--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# changed these to avoid error 1 exit status
 numpy==1.15.4
 torchvision==0.2.1
 https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
