--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
-aiofiles==0.4.0
-aiohttp==3.5.4
-asyncio==3.4.3
-fastai==1.0.57
+#aiofiles==0.4.0
+#aiohttp==3.5.4
+#asyncio==3.4.3
+#fastai==1.0.57
 #https://download.pytorch.org/whl/cpu/torch-1.1.0-cp37-cp37m-linux_x86_64.whl
-https://download.pytorch.org/whl/cu75/torch-0.1.6.post20-cp27-cp27mu-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp37-cp37m-linux_x86_64.whl
-numpy==1.16.3
-starlette==0.12.0
-uvicorn==0.7.1
-python-multipart==0.0.5
+#https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp37-cp37m-linux_x86_64.whl
+#numpy==1.16.3
+#starlette==0.12.0
+#uvicorn==0.7.1
+#python-multipart==0.0.5
+
+numpy==1.16.4
+torchvision==0.4.0a0+6b959ee
+https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
+fastai==1.0.57
+starlette
+uvicorn==0.3.32
+python-multipart
+aiofiles
+aiohttp
+
+
